extends Control

# Red Plasma Type 1
func _on_red_plasma_type_1_pressed():
	get_tree().change_scene("res://scenes/01_red_plasma_type_1.tscn")

# Red Plasma Type 2
func _on_red_plasma_type_2_pressed():
	get_tree().change_scene("res://scenes/02_red_plasma_type_2.tscn")

# Red Plasma Type 3
func _on_red_plasma_type_3_pressed():
	get_tree().change_scene("res://scenes/03_red_plasma_type_3.tscn")

# Red Plasma Type 4
func _on_red_plasma_type_4_pressed():
	get_tree().change_scene("res://scenes/04_red_plasma_type_4.tscn")

# Red Plasma Type 5
func _on_red_plasma_type_5_pressed():
	get_tree().change_scene("res://scenes/05_red_plasma_type_5.tscn")

# Red Plasma Type 6
func _on_red_plasma_type_6_pressed():
	get_tree().change_scene("res://scenes/06_red_plasma_type_6.tscn")

# Purple Plasma Type 1
func _on_purple_plasma_type_1_pressed():
	get_tree().change_scene("res://scenes/07_purple_plasma_type_1.tscn")

# Blue Plasma Type 1
func _on_blue_plasma_type_1_pressed():
	get_tree().change_scene("res://scenes/08_blue_plasma_type_1.tscn")

# Blue Plasma Type 2
func _on_blue_plasma_type_2_pressed():
	get_tree().change_scene("res://scenes/09_blue_plasma_type_2.tscn")

# Blue Plasma Type 3
func _on_blue_plasma_type_3_pressed():
	get_tree().change_scene("res://scenes/10_blue_plasma_type_3.tscn")

# Blue Plasma Type 4
func _on_blue_plasma_type_4_pressed():
	get_tree().change_scene("res://scenes/11_blue_plasma_type_4.tscn")

# Green Plasma Type 1
func _on_green_plasma_type_1_pressed():
	get_tree().change_scene("res://scenes/12_green_plasma_type_1.tscn")

# Green Plasma Type 2
func _on_green_plasma_type_2_pressed():
	get_tree().change_scene("res://scenes/13_green_plasma_type_2.tscn")

# Blue Green Plasma Type 1 
func _on_blue_green_plasma_type_1_pressed():
	get_tree().change_scene("res://scenes/14_blue_green_plasma_type_1.tscn")

# Color Plasma Type 1
func _on_color_plasma_type_1_pressed():
	get_tree().change_scene("res://scenes/15_color_plasma_type_1.tscn")

# Color Plasma Type 2
func _on_color_plasma_type_2_pressed():
	get_tree().change_scene("res://scenes/16_color_plasma_type_2.tscn")

# Blue Plasma Field Type 1
func _on_blue_plasma_field_type_1_pressed():
	get_tree().change_scene("res://scenes/17_blue_plasma_field_type_1.tscn")

# Blue Plasma Field Type 2
func _on_blue_plasma_field_type_2_pressed():
	get_tree().change_scene("res://scenes/18_blue_plasma_field_type_2.tscn")

# Blue Plasma Field Type 3
func _on_blue_plasma_field_type_3_pressed():
	get_tree().change_scene("res://scenes/19_blue_plasma_field_type_3.tscn")

# Plasma Field Type 4
func _on_plasma_field_type_4_pressed():
	get_tree().change_scene("res://scenes/20_plasma_field_type_4.tscn")

# Oscillating Plasma
func _on_oscillating_plasma_pressed():
	get_tree().change_scene("res://scenes/21_osc_plasma_elect.tscn")

# Plasma Ring
func _on_plasma_ring_pressed():
	get_tree().change_scene("res://scenes/22_plasma_ring.tscn")

# Force Field through Plasma
func _on_force_field_plasma_pressed():
	get_tree().change_scene("res://scenes/23_force_field_plasma.tscn")

# Back to Menu
func _on_back_to_menu_pressed():
	get_tree().change_scene("res://scenes/main_menu.tscn")